fix: body spacing styles

--- a/src/assets/styles/_base.css
+++ b/src/assets/styles/_base.css
@@ -36,7 +36,6 @@ body {
 #app {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
   font-weight: normal;
 }
 
@@ -56,7 +55,7 @@ a,
 
 @media (min-width: 1024px) {
   body {
-    padding-top: 80px;
+    padding-top: 40px;
   }
 }
 
